filter featue added

--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -44,7 +44,27 @@
 
     <%- body %>
 
-
+    <footer>
+        <div class="footer-container">
+            
+            <div class="footer-links">
+               
+                <ul>
+                    <li><a href="http://www.linkedin.com/in/fxan-thues">linkedIn</a></li>
+                    <li><a href="http://github.com/Faizanamd">Github</a></li>
+                </ul>
+            </div>
+            <div class="footer-contact">
+                <h4>Contact Us</h4>
+                <p>Email: famdizan8391@.com</p>
+                <p>Phone: +91 6389664891</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2023 Faizanamd All right reserved</p>
+        </div>
+    </footer>
+    
 
     
     <!-- <script src="/scripts/newIssue.modal.js"></script> -->
