--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -128,3 +128,55 @@ textarea {
         padding: 20px;
     }
 }
+footer {
+    width: 100%;
+    height: 120px;
+    background-color: #010409;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    bottom: 0;
+}
+.footer-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-left: 40px;
+    width: 400px;
+}
+li{
+    list-style: none;
+}
+li a{
+    text-decoration: none;
+    font-size: 1.5rem;
+    color: #ffffff;
+}
+.footer-contact{
+    font-size: 1.2rem;
+}
+
+.footer-rightNav {
+    margin-right: 48px;
+}
+
+.footer-rightNav button {
+    font-size: 1rem;
+    padding: 4px 8px;
+    font-weight: bold;
+    border: 1px solid;
+    border-radius: 5px;
+    transition: 0.3s ease-in-out;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.footer-rightNav button:hover {
+    transform: scale(1.15);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.footer-bottom{
+    margin-right: 40px;
+    font-size: 1.5rem;
+}
