clear all filter button added

--- a/public/styles/projectPage.style.css
+++ b/public/styles/projectPage.style.css
@@ -160,6 +160,26 @@
     color: #fff;
 }
 
+#clearAllFilter {
+    padding: 4px 12px;
+    font-size: 1rem;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-size: 1.5rem;
+    background-color: green;
+    /* Blue color for New Issue button */
+    color: #fff;
+    text-decoration: none;
+}
+
+#newIssueBtn {
+    background-color: #5bc0de;
+    /* Blue color for New Issue button */
+    color: #fff;
+}
+
 .topIssueButtonAreaBottom button:not(#newIssueBtn) {
     background-color: green;
     /* Green color for Filter and Search buttons */
@@ -492,7 +512,7 @@ select {
     border: 1px solid #ccc;
     border-radius: 0px;
     border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px; 
+    border-bottom-left-radius: 4px;
     margin-right: -15px;
     font-size: 16px;
 
