--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -133,10 +133,11 @@ footer {
     height: 120px;
     background-color: #010409;
     color: #ffffff;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: fixed;
+   
     bottom: 0;
 }
 .footer-container{
