home page got responsiveness

--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iSsueTracker</title>
     <link rel="stylesheet" href="/styles/layout.css">
-    <link rel="stylesheet" href="/styles/section.style.css">
+    <link rel="stylesheet" href="/styles/home.style.css">
     <link rel="stylesheet" href="/styles/projectPage.style.css">
 </head>
 
@@ -48,7 +48,6 @@
         <div class="footer-container">
             
             <div class="footer-links">
-               
                 <ul>
                     <li><a href="http://www.linkedin.com/in/fxan-thues">linkedIn</a></li>
                     <li><a href="http://github.com/Faizanamd">Github</a></li>
