--- a/public/styles/home.style.css
+++ b/public/styles/home.style.css
@@ -106,3 +106,10 @@ section {
     margin: 0px 16px;
 
 }
+
+/* Responsive styles */
+@media screen and (max-width: 600px) {
+    section{
+        padding: 2vh 16px;
+    }
+}
