--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -121,24 +121,18 @@ textarea {
     background-color: #2980b9;
 }
 
-/* Responsive styles */
-@media screen and (max-width: 600px) {
-    .modal-content {
-        max-width: 90%;
-        padding: 20px;
-    }
-}
 footer {
     width: 100%;
-    height: 120px;
+    /* height: 120px; */
     background-color: #010409;
     color: #ffffff;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
-   
+    padding: 32px 0px;
     bottom: 0;
+
 }
 .footer-container{
     display: flex;
@@ -180,4 +174,54 @@ li a{
 .footer-bottom{
     margin-right: 40px;
     font-size: 1.5rem;
+}
+
+
+/* Responsive styles */
+/* Responsive styles */
+@media screen and (max-width: 600px) {
+    body {
+        margin: 0;
+        padding: 0;
+    }
+
+    .modal-content {
+        max-width: 90%;
+        padding: 20px;
+    }
+
+    .logo a {
+        font-size: 1.3rem;
+        margin-left: 16px; /* Adjusted margin for smaller screens */
+    }
+
+    .rightNav {
+        margin-right: 18px;
+        font-weight: bolder;
+    }
+    footer{
+        display: flex;
+        flex-direction: column;
+        row-gap: 24px;
+        align-items:center;
+        justify-content: center;
+    }
+    .footer-container {
+        margin-left: 16px; /* Adjusted margin for smaller screens */
+        width: auto; /* Adjusted width for smaller screens */
+        display: flex;
+        flex-direction: column;
+        align-items: first baseline;
+        justify-content: center;
+        gap: 16px;
+    }
+
+    .footer-rightNav {
+        margin-right: 18px; /* Adjusted margin for smaller screens */
+    }
+
+    .footer-bottom {
+        margin-right: 16px; /* Adjusted margin for smaller screens */
+        font-size: 1.3rem; /* Adjusted font size for smaller screens */
+    }
 }
