project page become responsive

--- a/src/views/projectPage.ejs
+++ b/src/views/projectPage.ejs
@@ -1,5 +1,5 @@
 <script src="/scripts/Layout.modal.js"></script>
-<section>
+<section class="projectPageDIv">
     <div class="topArea">
         <% if(project){ %>
             <div class="projectDiv">
