--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -196,7 +196,7 @@ li a{
     }
 
     .rightNav {
-        margin-right: 18px;
+        margin-right: 12px;
         font-weight: bolder;
     }
     footer{
@@ -205,6 +205,7 @@ li a{
         row-gap: 24px;
         align-items:center;
         justify-content: center;
+        font-size: 1.2rem;
     }
     .footer-container {
         margin-left: 16px; /* Adjusted margin for smaller screens */
@@ -222,6 +223,7 @@ li a{
 
     .footer-bottom {
         margin-right: 16px; /* Adjusted margin for smaller screens */
-        font-size: 1.3rem; /* Adjusted font size for smaller screens */
+        font-size: 1rem; /* Adjusted font size for smaller screens */
+
     }
 }
