--- a/public/styles/projectPage.style.css
+++ b/public/styles/projectPage.style.css
@@ -1,3 +1,11 @@
+.projectPageDIv {
+    background-color: #161b22;
+    /* background-color: #161b22; */
+    padding: 2vh 10vw;
+    color: #ffffff;
+    min-height: calc(100vh - 70px);
+}
+
 .topArea {
     display: flex;
     width: 100%;
@@ -541,9 +549,89 @@ select {
 }
 
 /* Responsive styles */
-@media screen and (max-width: 600px) {
-    .modal-content2 {
-        max-width: 90%;
-        padding: 20px;
+@media screen and (max-width: 1280px) {
+    .projectPageDIv {
+
+        padding: 2vh 1vw;
+    }
+
+    .projectDiv {
+        padding: 10px 12px;
+
+    }
+
+    .projectDiv p {
+        font-size: 1.1rem;
+    }
+
+    .projectHeaiding {
+        font-size: 2rem;
+    }
+
+    .issueCounterHedading {
+        font-size: 1.1rem;
+    }
+    .issueCounterHedading span{
+        font-size: 1.3rem;
+    }
+    .topIssueButtonAreaTop h2{
+        font-size: 1.2rem;
+        /* color: red; */
+    }
+    .topIssueButtonAreaTop button{
+        font-size: 1.2rem;
+        /* color: red; */
+        padding: 6px 4px;
+    }
+    #deletProjectButton{
+        font-size: 1.2rem;
+        /* color: red; */
+        padding: 6px 4px;
+    }
+    #clearAllFilter {
+        font-size: 1.2rem;
+        /* color: red; */
+        padding: 6px 4px;
+    }
+    .topIssueButtonAreaBottom button{
+        font-size: 1.2rem;
+        /* color: red; */
+        padding: 6px 4px;
+    }
+    #searchQuery{
+        font-size: 13px;
+        padding: 8.6px 8px;
+    }
+    #searchForm button{
+        font-size: 13px;
+    }
+}
+
+/* Responsive styles */
+@media screen and (max-width: 850px) {
+    .projectPageDIv {
+
+        padding: 2vh 4px;
+    }
+    .projectDiv{
+        width: 95%;
+        padding: 10px 6px;
+    }
+    .topArea{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .issueListArea{
+        width: 90%;
+        /* background-color: red; */
+    }
+    .issueBox{
+        /* width: 60%; */
+        /* background-color: red; */
+    }
+    .issueBox{
+        /* width: 90%; */
+        background-color: red;
     }
 }
