--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -49,8 +49,8 @@
             
             <div class="footer-links">
                 <ul>
-                    <li><a href="http://www.linkedin.com/in/fxan-thues">linkedIn</a></li>
-                    <li><a href="http://github.com/Faizanamd">Github</a></li>
+                    <li><a href="http://www.linkedin.com/in/fxan-thues" target="_blank">linkedIn</a></li>
+                    <li><a href="http://github.com/Faizanamd" target="_blank">Github</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
