--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -26,7 +26,7 @@
             <!-- Form for creating a new project -->
             <form id="newProjectForm" action="/newProject" method="post">
                 <label for="name">Project Name</label>
-                <input type="text" name="name" id="name" placeholder="Project Name" maxlength="16" required>
+                <input type="text" name="name" id="name" placeholder="Project Name"  required>
 
                 <label for="description">Enter Description</label>
                 <textarea name="description" id="description" cols="30" rows="5" placeholder="Enter Description Here"
