--- a/public/styles/projectPage.style.css
+++ b/public/styles/projectPage.style.css
@@ -116,7 +116,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    margin-left: 16px;
+    margin-left: 12px;
     column-gap: 12px;
 }
 
@@ -653,7 +653,7 @@ select {
     .topIssueButtonAreaBottom{
         margin-left: 16px;
         column-gap: 6px;
-        row-gap: 3px;
+        row-gap: 6px;
     }
     #searchForm{
         width: 100%;
@@ -673,6 +673,8 @@ select {
         font-size: 1rem;
     }
     .topIssueButtonAreaTop{
-        column-gap: 2px;
+        justify-content: space-evenly;
+        column-gap: 12px;
     }
+
 }
